docroot/themes/custom/ymca/css/style.css
/* ... */
.phone-call-wrapper {
  background-color: #26bcbd;
  line-height: 92px;
  text-align: center;
  position: fixed;
  bottom: 0;
  z-index: 2;
  left: 0;
  right: 0;
}
@media screen and (max-width: 767px) {
  .phone-call-wrapper {
    line-height: 35px;
    padding-bottom: 5px;
    text-align: left;
  }
}
.phone-call-wrapper .description {
  color: #bde6e6;
  font-size: 20px;
  font-family: "Cachet", Arial, sans-serif;
  text-transform: uppercase;
  vertical-align: middle;
  font-weight: bold;
  margin-right: 40px;
}
@media screen and (max-width: 767px) {
  .phone-call-wrapper .description {
    margin-right: 0;
    padding: 0 15px;
    display: block;
    font-size: 18px;
  }
}
.phone-call-wrapper .number {
  background: url("../img/phone-call-ico.png") no-repeat 0 center;
  font-family: "Cachet", Arial, sans-serif;
  font-size: 40px;
  font-weight: bold;
  padding: 0 0 0 45px;
  vertical-align: middle;
}
@media screen and (max-width: 767px) {
  .phone-call-wrapper .number {
    margin: 0 15px;
    display: block;
    font-size: 35px;
  }
}
.phone-call-wrapper .number a {
  color: #fff;
  text-decoration: none;
}

.groupex-form-full {
  padding-top: 15px;
}
.groupex-form-full #location-select-wrapper {
  padding-right: 30px;
  float: left;
  width: 50%;
}
.groupex-form-full #location-select-wrapper label {
  display: none;
}
.groupex-form-full #location-select-wrapper select {
  height: 50px;
  line-height: 50px;
  text-indent: 20px;
}
.groupex-form-full #date-select-wrapper {
  float: left;
  width: 50%;
  position: relative;
}
.groupex-form-full #date-select-wrapper:before {
  background-color: #f8f8f8;
  border-radius: 5px;
  color: #777777;
  content: "\e953";
  font-family: icomoon;
  font-size: 20px;
  left: 1px;
  padding: 10px;
  position: absolute;
  top: 1px;
}
.groupex-form-full #date-select-wrapper label {
  display: none;
}
.groupex-form-full #date-select-wrapper select {
  height: 50px;
  line-height: 50px;
  text-indent: 50px;
}
.groupex-form-full #class-select-wrapper {
  float: left;
  width: 50%;
}
.groupex-form-full #class-select-wrapper label {
  display: none;
}
.groupex-form-full #class-select-wrapper select {
  height: 50px;
  line-height: 50px;
  text-indent: 20px;
}
.groupex-form-full .instructor-chosen {
  color: #777777;
  margin-bottom: 15px;
  font-size: 16px;
}
.groupex-form-full .instructor-chosen .name {
  color: #92288d;
  margin: 0 10px;
}
.groupex-form-full .instructor-chosen .name .icon-user {
  color: #92288d;
  margin-right: 5px;
}
.groupex-form-full #location-wrapper .form-group {
  margin-bottom: 8px;
}
.groupex-form-full #location-wrapper .form-group .ajax-progress-throbber {
  position: absolute;
  right: 5px;
  top: 0;
}
.groupex-form-full #location-wrapper .form-group .inner {
  background-color: #f8f8f8;
  border-radius: 3px;
  border: 1px solid #e9e9e9;
  color: #1d1d1b;
  position: relative;
  padding: 0px 25px 0px 40px;
  min-height: 52px;
  line-height: 52px;
}
.groupex-form-full #location-wrapper .form-group .inner input {
  position: absolute;
  left: 10px;
  top: 17px;
  margin-left: 0;
}
.groupex-form-full #location-wrapper .form-group .inner label {
  background: none;
  border: none;
  text-align: left;
  display: inline-block;
  line-height: 52px;
  vertical-align: middle;
  position: absolute;
  left: 0;
  bottom: 0;
  right: 0;
  top: 0;
  padding: 0 25px 0 45px;
}
.groupex-form-full #location-wrapper .form-group .inner label .label-wrapper span {
  line-height: 18px;
  display: inline-block;
  vertical-align: middle;
  white-space: normal;
}
.groupex-form-full #location-wrapper .form-group .inner input {
  display: none;
}
.groupex-form-full #location-wrapper .form-group .icon {
  color: #d8d8d8;
  position: absolute;
  left: 10px;
  top: 13px;
  font-size: 22px;
}
@media screen and (max-width: 767px) {
  .groupex-form-full #location-wrapper .form-group .icon {
    top: 9px;
  }
}
.groupex-form-full #location-wrapper .form-group.checked .inner {
  background-color: #c6188b;
  border-color: #c6188b;
  color: #fff;
}
.groupex-form-full #location-wrapper .form-group.checked .icon {
  color: #f4d1e8;
}
@media screen and (max-width: 767px) {
  .groupex-form-full .group-ex-time,
  .groupex-form-full .group-ex-date,
  .groupex-form-full .help-block {
    margin: 0;
    height: 0;
  }
  .groupex-form-full .group-ex-time label,
  .groupex-form-full .group-ex-date label,
  .groupex-form-full .help-block label {
    display: inline;
  }
  .groupex-form-full #groupex-full-form-wrapper > .form-group {
    margin: 0;
    height: 0;
  }
}

.groupex-results {
  max-height: 600px;
  overflow-y: auto;
  overflow-x: hidden;
  clear: both;
  padding-top: 15px;
}
@media screen and (max-width: 767px) {
  .groupex-results {
    height: auto;
    max-height: none;
    overflow: hidden;
    margin: 0 -15px;
  }
}
.groupex-results table {
  width: 100%;
}
.groupex-results table td {
  padding: 20px 15px;
}
@media screen and (max-width: 767px) {
  .groupex-results table td {
    padding: 10px 5px;
  }
}
.groupex-results table td.time-duration {
  color: #1d1d1b;
  max-width: 180px;
}
.groupex-results table td.time-duration .icon-clock {
  color: #d8d8d8;
  margin-right: 10px;
}
.groupex-results table td.time-duration .duration {
  color: #afafae;
  font-style: italic;
  white-space: nowrap;
}
.groupex-results table td.instructor {
  line-height: 14px;
}
@media screen and (max-width: 767px) {
  .groupex-results table td.instructor {
    min-width: 105px;
  }
}
.groupex-results table td.instructor a {
  color: #92288d;
}
.groupex-results table td.instructor .icon-user {
  color: #92288d;
  margin-right: 10px;
}
.groupex-results table td.instructor .icon-loop2 {
  font-size: 10px;
  color: #c6188b;
  margin-right: 5px;
  margin-left: 24px;
  font-weight: bold;
}
.groupex-results table td.instructor .sub {
  font-size: 12px;
  color: #c6188b;
}
.groupex-results table tr:nth-child(even) td {
  background-color: #fefefe;
}
/* ... */

